// Custom Keyboard Builder - ERD refactor proposal, compact version
// Muc tieu: buyer chon keyboard kit, sau do mix switch/keycap/stabilizer/accessory.
// Giu ERD gon de bat dau refactor tung buoc, tranh qua nhieu lien ket.
// Link count: 33.
// Logical enums below are implemented in SQL Server as CHECK-constrained VARCHAR columns.

Enum UserRole {
  Buyer
  Seller
  Admin
}

Enum SellerApplicationStatus {
  Pending
  Approved
  Rejected
}

Enum BuildStatus {
  Draft
  Saved
  Requested
  Archived
}

Enum RequestStatus {
  Pending
  Accepted
  In_progress
  Completed
  Cancelled
}

Enum NoiseRequirement {
  Normal
  Quiet
  Silent
}

Enum SwitchTechnology {
  Mechanical
  HE
  Topre
  Optical
}

Enum DeviceType {
  QC_STATION
  KEY_SIGNAL_TESTER
  LATENCY_TESTER
  NOISE_SENSOR
}

Enum TestSessionStatus {
  Running
  Passed
  Warning
  Failed
}

Enum KeyTestResult {
  Pass
  Warning
  Fail
}

Enum KeyFailureType {
  NoSignal
  WrongKey
  Chatter
  StuckKey
  HighLatency
  TooNoisy
}

Table roles {
  id int [pk, increment]
  role_name UserRole [unique, not null]
  permissions varchar
}

Table users {
  id int [pk, increment]
  role_id int [not null, ref: > roles.id]
  username varchar(100) [unique, not null]
  email varchar(255) [unique, not null]
  phone varchar(30) [unique, not null]
  password_hash varchar(255) [not null]
  is_active boolean [not null]
}

Table seller_profiles {
  id int [pk, increment]
  user_id int [not null, unique, ref: > users.id]
  shop_name varchar(255) [not null]
  phone varchar(30) [not null]
  address varchar(500) [not null]
  is_verified boolean [not null]
  verified_at datetime
}

Table seller_applications {
  id int [pk, increment]
  buyer_user_id int [not null, ref: > users.id]
  shop_name varchar(255) [not null]
  phone varchar(30) [not null]
  address varchar(500) [not null]
  note varchar(500)
  status SellerApplicationStatus [not null]
  review_note varchar(500)
  created_at datetime [not null]
  reviewed_at datetime
  reviewed_by int [ref: > users.id]

  Note: 'Buyer requests an upgrade to Seller. Admin approves (-> set users.role to Seller + create seller_profiles) or rejects. At most one Pending application per buyer (filtered unique index UX_seller_applications_pending_buyer).'
}

Table brands {
  id int [pk, increment]
  brand_name varchar(255) [unique, not null]
  country varchar(100)
}

Table layouts {
  id varchar(50) [pk]
  layout_name varchar(100) [not null]
  form_factor varchar(100) [not null] // 60, 65, 75, TKL, 100, Alice...
  key_count int [not null]
}

Table keyboard_kits {
  id varchar(50) [pk]
  brand_id int [not null, ref: > brands.id]
  layout_id varchar(50) [not null, ref: > layouts.id]
  kit_name varchar(255) [not null]
  pcb_technology SwitchTechnology [not null]
  switch_mount varchar(100) [not null] // MX 3-pin, MX 5-pin, HE, Topre, Optical
  required_switch_quantity int [not null]
  included_parts varchar(500) // case, PCB, plate, foam, cable...
  price_usd decimal(10,2) [not null]
  is_available boolean [not null]
}

Table switches {
  id varchar(50) [pk]
  brand_id int [not null, ref: > brands.id]
  switch_name varchar(255) [not null]
  switch_technology SwitchTechnology [not null]
  mount_type varchar(100) [not null] // MX 3-pin, MX 5-pin, HE, Topre, Optical
  switch_type varchar(100)
  actuation_force_g int
  price_usd decimal(10,2) [not null] // unit price per switch
  is_available boolean [not null]
}

Table keycap_sets {
  id varchar(50) [pk]
  brand_id int [not null, ref: > brands.id]
  keycap_name varchar(255) [not null]
  supported_form_factor varchar(255) [not null] // 60/65/75/TKL/100/universal notes
  profile varchar(100)
  material varchar(100)
  price_usd decimal(10,2) [not null]
  is_available boolean [not null]
}

Table stabilizers {
  id varchar(50) [pk]
  brand_id int [not null, ref: > brands.id]
  stab_name varchar(255) [not null]
  supported_layouts varchar(255) [not null] // 60/65/75/TKL/100 or universal
  price_usd decimal(10,2) [not null]
  is_available boolean [not null]
}

Table accessories {
  id varchar(50) [pk]
  accessory_type varchar(100) [not null] // Lube, Spring, Film, Foam, Cable, Tool
  accessory_name varchar(255) [not null]
  target_component varchar(100) // Switch, Stabilizer, Kit, General
  price_usd decimal(10,2) [not null]
  is_available boolean [not null]
}

Table builds {
  id varchar(50) [pk]
  buyer_id int [not null, ref: > users.id]
  kit_id varchar(50) [not null, ref: > keyboard_kits.id]
  name varchar(255) [not null]
  notes varchar(500)
  noise_requirement NoiseRequirement [not null]
  status BuildStatus [not null]
  total_cost_snapshot decimal(10,2) [not null]
  created_at datetime [not null]
  updated_at datetime
}

Table build_items {
  id int [pk, increment]
  build_id varchar(50) [not null, ref: > builds.id]
  switch_id varchar(50) [ref: > switches.id]
  keycap_id varchar(50) [ref: > keycap_sets.id]
  stab_id varchar(50) [ref: > stabilizers.id]
  accessory_id varchar(50) [ref: > accessories.id]
  quantity int [not null]
  unit_price_snapshot decimal(10,2) [not null]
  notes varchar(500)

  Note: 'Exactly one product FK must be set. Kit is stored on builds.kit_id. Switch item quantity must satisfy keyboard_kits.required_switch_quantity.'
}

Table build_mods {
  id int [pk, increment]
  build_id varchar(50) [not null, ref: > builds.id]
  mod_type varchar(100) [not null] // Lube, Film, Spring_swap, Tape_mod, Foam_mod
  target_component varchar(100) [not null] // Switch, Stabilizer, Kit, Build
  notes varchar(500)
}

Table build_requests {
  id varchar(50) [pk]
  build_id varchar(50) [not null, ref: > builds.id]
  seller_user_id int [not null, ref: > users.id]
  request_payload_json text [not null]
  status RequestStatus [not null]
  note varchar(500)
  requested_at datetime [not null]
  accepted_at datetime
  completed_at datetime
  updated_at datetime
}

Table devices {
  id varchar(50) [pk]
  seller_user_id int [not null, ref: > users.id]
  device_name varchar(100) [not null]
  device_type DeviceType [not null]
  is_active boolean [not null]
  last_seen_at datetime
  created_at datetime [not null]

  Note: 'Device rows are created on demand for the seller QC station. This phase uses simulated telemetry, not embedded hardware.'
}

Table device_test_sessions {
  id varchar(50) [pk]
  request_id varchar(50) [not null, ref: > build_requests.id]
  device_id varchar(50) [not null, ref: > devices.id]
  seller_user_id int [not null, ref: > users.id]
  switch_technology SwitchTechnology [not null]
  noise_requirement NoiseRequirement [not null]
  total_keys int [not null]
  tested_keys int [not null]
  passed_keys int [not null]
  warning_keys int [not null]
  failed_keys int [not null]
  average_latency_ms decimal(8,2)
  max_latency_ms decimal(8,2)
  average_noise_db decimal(8,2)
  max_noise_db decimal(8,2)
  status TestSessionStatus [not null]
  started_at datetime [not null]
  completed_at datetime

  Note: 'One QC session belongs to one build request and one seller QC device. Completion is allowed only when tested_keys reaches total_keys.'
}

Table device_key_test_results {
  id bigint [pk, increment]
  session_id varchar(50) [not null, ref: > device_test_sessions.id]
  request_id varchar(50) [not null, ref: > build_requests.id]
  device_id varchar(50) [not null, ref: > devices.id]
  key_code varchar(30) [not null]
  expected_key varchar(30) [not null]
  received_key varchar(30)
  press_signal_detected boolean [not null]
  latency_ms decimal(8,2)
  press_event_count int [not null]
  bounce_count int
  release_signal_detected boolean [not null]
  hold_duration_ms int
  is_stuck boolean [not null]
  noise_db decimal(8,2)
  switch_technology SwitchTechnology [not null]
  result KeyTestResult [not null]
  failure_type KeyFailureType
  failure_reason varchar(255)
  recorded_at datetime [not null]

  indexes {
    (session_id, key_code) [unique, name: 'UX_dktr_session_key_code']
  }

  Note: 'request_id and device_id are denormalized from the session for faster per-request QC lookup. Chatter/double click uses press_event_count and bounce_count after a completed press-release cycle; StuckKey uses release_signal_detected=false and bounce_count should remain null.'
}

Table audit_log {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  table_name varchar(100) [not null]
  record_id varchar(100) [not null]
  action varchar(100) [not null]
  old_value_json text
  new_value_json text
  changed_at datetime [not null]
}

Table chat_conversations {
  id varchar(50) [pk]
  seller_user_id int [not null, ref: > users.id]
  buyer_id int [ref: > users.id]
  admin_user_id int [ref: > users.id]
  build_request_id varchar(50) [ref: > build_requests.id]
  created_at datetime [not null]
  updated_at datetime

  Note: 'Exactly one of buyer_id or admin_user_id must be set. Buyer-admin direct chat is not allowed.'
}

Table chat_messages {
  id varchar(50) [pk]
  conversation_id varchar(50) [not null, ref: > chat_conversations.id]
  sender_user_id int [not null, ref: > users.id]
  message_text text [not null]
  sent_at datetime [not null]
}
